pantklient/kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pant-web
  namespace: #{NAMESPACE}#
  labels:
    app: pant-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: pant-web
